<resources>
    <string name="app_name">MyCourses</string>
    <string name="students_label">Add student</string>
    <string name="fac_number">Факултетен номер</string>
    <string name="first_name_label">Име</string>
    <string name="second_name_label">Фамилия</string>
    <string name="course_label">Специалност</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_label">Име</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="settings_label">Settings</string>
    <string name="sendNotification_label">Send notification</string>
    <string name="time_for_notification_label">Time for notification</string>
    <string name="cancel_label">cancel</string>
    <string name="click_for_set_label">click for set</string>
</resources>