<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/fragment_show_students"
    android:id="@+id/item_layout_students_list">

    <TextView
        android:id="@+id/tv_facNumber_students_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toStartOf="@+id/tv_name_students_list"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/fac_number" />

    <TextView
        android:id="@+id/tv_name_students_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        android:textAlignment="viewStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_facNumber_students_list"
        app:layout_constraintEnd_toStartOf="@+id/tv_course_students_list"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_facNumber_students_list"
        tools:text="@string/name_label" />

    <TextView
        android:id="@+id/tv_course_students_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        android:textAlignment="viewStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_name_students_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_name_students_list"
        tools:text="@string/course_label" />
</androidx.constraintlayout.widget.ConstraintLayout>